<resources>
    <string name="app_name">MoneyControl</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="app_name_tiny">Money Control</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_today">Oggi</string>
    <string name="navigation_balance">Bilancio</string>
    <string name="navigation_map">Mappa</string>
    <string name="example_day_number">13</string>
    <string name="example_day_letter">martedì</string>
    <string name="example_month_year">Gennaio 2018</string>
    <string name="addnewexpense">AddNewExpense</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_new_expense">AddNewExpenseActivity</string>
    <string name="undo">Annulla</string>
    <string name="paid">Pagata</string>
    <string name="EUR">€</string>
    <string name="sample_category">Divertimento</string>
    <string name="place_autocomplete_hint">Luogo</string>
    <string name="example_date">05/01/2018</string>
    <string name="example_time">15:30</string>
    <string name="future_expense">Prevista</string>
    <string name="overdue_expense">Scaduta</string>
    <string name="paid_expense">Pagata</string>
    <string name="expense_new_title">Nuova</string>
    <string name="EntryDetailsActivity">EntryDetailsActivity</string>
    <string name="take_new_photo">Foto</string>
    <string name="delete">Elimina</string>
    <string name="full_image_preview">Anteprima Immagine Full Screen</string>
    <string name="alert_delete_photo">Sei sicuro di voler eliminare questa foto?</string>
    <string name="No">No</string>
    <string name="Yes">Si</string>
    <string name="delete_file_failure">Ops... qualcosa è andato storto. La foto non è stata eliminata.</string>
    <string name="Ok">Ok</string>
    <string name="permission_camera_required">L\'applicazione ha bisogno dell\'accesso alla fotocamera.</string>
    <string name="permissions_camera_denied">Hai negato l\'accesso alla fotocamera.</string>
    <string name="picture_taken">Foto salvata correttamente</string>
    <string name="picture_taken_failure">Ops... La Foto non è stata salvata!</string>
    <string name="photo_deleted">Foto eliminata</string>
    <string name="descrizione_hint">Descrizione</string>
    <string name="repeat">Ripeti</string>
    <string name="save">Salva</string>
    <string name="example_category">Divertimento</string>
    <string name="Expense">Spesa</string>
    <string name="Income">Entrata</string>
    <string name="entry_saved_succes">Voce salvata correttamente</string>
    <string name="Delete">Elimina</string>
    <string name="entry_deleted">Voce eliminata</string>
    <string name="paid_today">Pagate (oggi)</string>
    <string name="total_income">ENTRATE TOTALI:</string>
    <string name="total_expense">SPESE TOTALI:</string>
    <string name="number_500">500</string>
    <string name="number_200">200</string>
    <string name="future">Previste</string>
    <string name="amount_example">50,25</string>
    <string name="content_description">image</string>
    <string name="example_year">2018</string>
    <string name="example_month_year_balance">Giu 2018</string>
    <string name="entrate">Entrate</string>
    <string name="spese">Spese</string>
    <string name="risparmio">Risparmio</string>
    <string name="totale">Totale</string>
    <string name="example_month">Gennaio</string>
    <string name="ricerca_giorno">Ricerca Giorno</string>
    <string name="settings">settings</string>
    <string name="permission_location_required">L\'applicazione ha bisogno dell\'accesso alla posizione.</string>
    <string name="permissions_location_denied">Hai negato l\'accesso alla posizione.</string>
    <string name="gps_disabled">Il tuo GPS sembra essere disattivato, vuoi attivarlo?</string>
    <string name="map_tips">Tieni premuto un marker per aggiornare l\'indirizzo</string>
</resources>
