<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/category_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_icons8_carosello"
        android:contentDescription="@string/content_description"></ImageView>

    <TextView
        android:id="@+id/category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/example_category"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/category_image"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/total_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="21dp"
        android:text="@string/amount_example"
        android:textColor="@color/red"
        app:layout_constraintEnd_toStartOf="@+id/total_expense_eur"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_expense_eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="21dp"
        android:text="@string/EUR"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>