<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristian.moneycontrol.SingleDayActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_day_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/example_month"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/example_year"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <TextView
            android:id="@+id/total_income_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/entrate"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="4dp"
            android:text="@string/amount_example"
            android:textColor="@color/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_income_label" />

        <TextView
            android:id="@+id/total_income_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/EUR"
            android:textColor="@color/green"
            app:layout_constraintStart_toEndOf="@+id/total_income"
            app:layout_constraintTop_toBottomOf="@+id/total_income_label" />

        <TextView
            android:id="@+id/total_expense_label"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:text="@string/spese"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/total_income_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="4dp"
            android:text="@string/amount_example"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/total_income_label"
            app:layout_constraintTop_toBottomOf="@+id/total_expense_label" />

        <TextView
            android:id="@+id/total_expense_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/EUR"
            android:textColor="@color/red"
            app:layout_constraintStart_toEndOf="@+id/total_expense"
            app:layout_constraintTop_toBottomOf="@+id/total_expense_label" />

        <TextView
            android:id="@+id/total_saving_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/risparmio"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="3dp"
            android:text="@string/amount_example"
            app:layout_constraintEnd_toStartOf="@+id/total_saving_eur"
            app:layout_constraintTop_toBottomOf="@+id/total_saving_label" />

        <TextView
            android:id="@+id/total_saving_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="4dp"
            android:text="@string/EUR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_saving_label" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <GridView
        android:id="@+id/gridViewBalanceDaily"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:columnWidth="50dp"
        android:gravity="center"
        android:maxHeight="300dp"
        android:minHeight="0dp"
        android:nestedScrollingEnabled="true"
        android:numColumns="1"
        android:stretchMode="columnWidth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</android.support.constraint.ConstraintLayout>
